# webdog

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
scripts/: build-portable.cjs
src/: App.css  App.tsx  index.css  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: EnvPanel.tsx  HistoryPanel.tsx  JsonEditor.tsx  JsonTree.tsx  KeyValueEditor.tsx  RequestPanel.tsx  ResponsePanel.tsx  WsPanel.tsx
webdog-wpf/: build.bat
webdog-wpf/WebDog/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  WebDog.csproj
webdog-wpf/WebDog/Controls/: LineNumberTextBox.cs
webdog-wpf/WebDog/Converters/: Converters.cs
webdog-wpf/WebDog/Models/: EnvVariable.cs  FormParamModel.cs  HistoryItem.cs  JsonNodeModel.cs  KeyValuePair.cs  RequestConfig.cs  ResponseData.cs  WsMessage.cs
webdog-wpf/WebDog/Services/: CodeSnippetService.cs  CurlService.cs  HttpService.cs  Logger.cs  OAuthService.cs  StorageService.cs  SyntaxHighlighter.cs  ThemeService.cs  WsService.cs
webdog-wpf/WebDog/Themes/: DarkTheme.xaml  LightTheme.xaml  Shadows.xaml
webdog-wpf/WebDog/ViewModels/: MainViewModel.cs  RelayCommand.cs  ViewModelBase.cs
webdog-wpf/WebDog/Views/: BulkEditDialog.cs
